// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integration_selector/channel_list_row should match snapshot with delete_at filled in 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingHorizontal": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 65,
        "opacity": 1,
      }
    }
    testID="ChannelListRow"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="1234"
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="ChannelListRow.1234"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="archive-outline"
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              }
            }
          />
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
                "marginLeft": 5,
              }
            }
            testID="ChannelListRow.display_name"
          >
            channel
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`components/integration_selector/channel_list_row should match snapshot with open channel icon 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingHorizontal": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 65,
        "opacity": 1,
      }
    }
    testID="ChannelListRow"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="1234"
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="ChannelListRow.1234"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="circle-multiple-outline"
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              }
            }
          />
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
                "marginLeft": 5,
              }
            }
            testID="ChannelListRow.display_name"
          >
            channel
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`components/integration_selector/channel_list_row should match snapshot with private channel icon 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingHorizontal": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 65,
        "opacity": 1,
      }
    }
    testID="ChannelListRow"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="1234"
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="ChannelListRow.1234"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="circle-multiple-outline"
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              }
            }
          />
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
                "marginLeft": 5,
              }
            }
            testID="ChannelListRow.display_name"
          >
            channel
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`components/integration_selector/channel_list_row should match snapshot with purpose filled in 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingHorizontal": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 65,
        "opacity": 1,
      }
    }
    testID="ChannelListRow"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="1234"
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="ChannelListRow.1234"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="circle-multiple-outline"
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              }
            }
          />
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
                "marginLeft": 5,
              }
            }
            testID="ChannelListRow.display_name"
          >
            channel
          </Text>
        </View>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "rgba(63,67,80,0.5)",
              "fontFamily": "OpenSans",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "marginTop": 7,
            }
          }
        >
          My purpose
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`components/integration_selector/channel_list_row should match snapshot with shared filled in 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingHorizontal": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 65,
        "opacity": 1,
      }
    }
    testID="ChannelListRow"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="1234"
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
          }
        }
        testID="ChannelListRow.1234"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="circle-multiple-outline"
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              }
            }
          />
          <Text
            style={
              {
                "color": "#3f4350",
                "fontFamily": "OpenSans",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
                "marginLeft": 5,
              }
            }
            testID="ChannelListRow.display_name"
          >
            channel
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
